ChangeLog
---------

- added broker function get_json_string_keep_unused

- added get_default_value to cci_param interface
- added cci_param constructors (eliminating optional function parameters)
- underlying gs_param:
  - added default value
  - added is_used status (and get not impacting that status)
  - added internal init value locked check

- moved license to own file (not changed the license)
- added hierarchical precendence support by 
- adding lock to initial values

- added cci_param constructor with implementation pointer
- changed global static factory function names and namespaces
- changed broker.add_param to be called by cci_header class
- added optional broker parameter to param constructors
- separated header from implementation into different files
- introduced new path substructure in api path
- introduced cci::cnf namespace
- changed cci.h to be main include file and
- made cci_config.h the config part include file
- renamed cci_broker_module into cci_broker_manager and added convenience cci_broker_manager_module (deriving from sc_module)
- renamed cnf_api to cnf_broker

**** CCI-1.31-cci_api-160310.tar.gz ****

- Pimpl idiom / Opaque Pointer concept for params
- removed boost version dependency of implementation
- replaced boost int64 with SystemC int64
- replaced boost shared_ptr and function 
- private Broker API and example


**** CCI-1.3-cci_api-240210.tar.gz ****

- changed param hierarchy to be defined by the document and directly implemented thus being used directly by user (without pure virtual interface) (interfaces are just for compile checks)
- added is_invalid implementation, also for uninitialized params
- added locked status and checks to gs implementation
- added is_used dummy to gs implementation
- changed is_used semantic: also true if there WAS an object mapped to the NVP

**** CCI-1.21-cci_api-130110.tar.gz ****

- added syncronize API to base param
- added lock API to base params
- added mutable template types to POs